codegen/ui_tests/rhai_fn_rename_to_index_setter.stderr
error: use attribute 'index_set' instead
  --> ui_tests/rhai_fn_rename_to_index_setter.rs:12:15
   |
12 |     #[rhai_fn(name = "index$set$")]
   |               ^^^^
